Version 2.0 Update (#125)
* Anisotropy mode (development)
* Upgrade Java to 19, gradle and dependencies (#124)